--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <modules>
-        <module>config</module>
         <module>api</module>
-        <module>common</module>
         <module>services</module>
     </modules>
     <parent>
@@ -28,8 +26,6 @@
 
         <com-myadream-app-qiyang-api.version>0.0.1-SNAPSHOT</com-myadream-app-qiyang-api.version>
         <com-myadream-app-qiyang-services.version>0.0.1-SNAPSHOT</com-myadream-app-qiyang-services.version>
-        <com-myadream-app-qiyang-conf.version>0.0.1-SNAPSHOT</com-myadream-app-qiyang-conf.version>
-        <com-myadream-app-qiyang-common.version>0.0.1-SNAPSHOT</com-myadream-app-qiyang-common.version>
 
         <maven-remote-resources-plugin.version>1.7.0</maven-remote-resources-plugin.version>
 
@@ -42,6 +38,8 @@
         <com-alibaba-fastjson.version>2.0.3</com-alibaba-fastjson.version>
         <spring-boot-starter-log4j2.version>2.7.0</spring-boot-starter-log4j2.version>
         <org-hehibernate-validator.version>6.0.10.Final</org-hehibernate-validator.version>
+        <com-alibaba-druid.version>1.0.31</com-alibaba-druid.version>
+        <io-jsonwebtoken-jjwt.version>0.7.0</io-jsonwebtoken-jjwt.version>
     </properties>
 
     <dependencyManagement>
@@ -56,16 +54,7 @@
                 <artifactId>services</artifactId>
                 <version>${com-myadream-app-qiyang-services.version}</version>
             </dependency>
-            <dependency>
-                <groupId>com.myadream.app.qiyang</groupId>
-                <artifactId>config</artifactId>
-                <version>${com-myadream-app-qiyang-conf.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.myadream.app.qiyang</groupId>
-                <artifactId>common</artifactId>
-                <version>${com-myadream-app-qiyang-common.version}</version>
-            </dependency>
+
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
@@ -144,7 +133,20 @@
                 <version>${eu-bitwalker-UserAgentUtils.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid</artifactId>
+                <version>${com-alibaba-druid.version}</version>
+            </dependency>
+
             <!--  validate hibernate -->
+
+            <!--JWT-->
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>${io-jsonwebtoken-jjwt.version}</version>
+            </dependency>
         </dependencies>
 
     </dependencyManagement>
@@ -189,6 +191,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
     </dependencies>
 
     <build>
