--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <modules>
-<!--        <module>api</module>-->
-<!--        <module>services</module>-->
+        <!--        <module>api</module>-->
+        <!--        <module>services</module>-->
         <module>single</module>
     </modules>
     <parent>
@@ -43,20 +43,21 @@
         <io-jsonwebtoken-jjwt.version>0.9.0</io-jsonwebtoken-jjwt.version>
         <cn-hutool.all>4.5.7</cn-hutool.all>
         <dom4j.version>1.6.1</dom4j.version>
+        <spring-mobile-device.version>1.1.5.RELEASE</spring-mobile-device.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
-<!--            <dependency>-->
-<!--                <groupId>com.myadream.app.qiyang</groupId>-->
-<!--                <artifactId>api</artifactId>-->
-<!--                <version>${com-myadream-app-qiyang-api.version}</version>-->
-<!--            </dependency>-->
-<!--            <dependency>-->
-<!--                <groupId>com.myadream.app.qiyang</groupId>-->
-<!--                <artifactId>services</artifactId>-->
-<!--                <version>${com-myadream-app-qiyang-services.version}</version>-->
-<!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>com.myadream.app.qiyang</groupId>-->
+            <!--                <artifactId>api</artifactId>-->
+            <!--                <version>${com-myadream-app-qiyang-api.version}</version>-->
+            <!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>com.myadream.app.qiyang</groupId>-->
+            <!--                <artifactId>services</artifactId>-->
+            <!--                <version>${com-myadream-app-qiyang-services.version}</version>-->
+            <!--            </dependency>-->
 
             <dependency>
                 <groupId>com.alibaba</groupId>
@@ -166,6 +167,12 @@
                 <version>${dom4j.version}</version>
             </dependency>
 
+            <!--获取设备信息-->
+            <dependency>
+                <groupId>org.springframework.mobile</groupId>
+                <artifactId>spring-mobile-device</artifactId>
+                <version>${spring-mobile-device.version}</version>
+            </dependency>
 
         </dependencies>
 
@@ -212,6 +219,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
 
     </dependencies>
 
